--- a/rafat/index.html
+++ b/rafat/index.html
@@ -39,8 +39,12 @@
 
             <div class="grid md:grid-cols-2 gap-7">
               <div class="flex gap-2 md:gap-4">
-                <div class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px] ">
-                  <i class="fa-solid fa-file-shield text-4xl leading-none text-white"></i>
+                <div
+                  class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px]"
+                >
+                  <i
+                    class="fa-solid fa-file-shield text-4xl leading-none text-white"
+                  ></i>
                 </div>
 
                 <div class="space-y-2">
@@ -58,7 +62,9 @@
               <!-- safety card -->
 
               <div class="flex gap-4">
-                <div class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1]  rounded-[40px]">
+                <div
+                  class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px]"
+                >
                   <i class="fa-solid fa-file-shield text-4xl text-white"></i>
                 </div>
 
@@ -77,7 +83,9 @@
               <!-- safety card -->
 
               <div class="flex gap-4">
-                <div class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px] ">
+                <div
+                  class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px]"
+                >
                   <i class="fa-solid fa-file-shield text-4xl text-white"></i>
                 </div>
 
@@ -96,7 +104,9 @@
               <!-- safety card -->
 
               <div class="flex gap-4">
-                <div class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px]">
+                <div
+                  class="w-16 h-16 bg-blue-400 flex items-center justify-center aspect-[1] rounded-[40px]"
+                >
                   <i class="fa-solid fa-file-shield text-4xl text-white"></i>
                 </div>
 
@@ -155,5 +165,148 @@
       </div>
     </section>
     <!-- what we offer section -->
+
+    <!-- our courses section -->
+    <section class="py-8 md:py-12">
+      <div class="holder">
+        <div
+          class="space-y-5 text-center capitalize max-w-[820px] mx-auto px-5"
+        >
+          <h2 class="text-[44px] font-semibold">
+            <span class="text-[#5d50c6]">our</span>
+            <span class="text-[#fda638]">courses</span>
+          </h2>
+          <p class="text-base text-black opacity-50 leading-normal">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            debitis facilis sunt expedita molestiae ullam cupiditate qui
+            asperiores delectus corporis.
+          </p>
+        </div>
+        <!-- title -->
+
+        <div class="grid md:grid-cols-2 gap-[30px] pt-20">
+          <div class="grid grid-cols-12">
+            <div class="col-span-5">
+              <img
+                src="https://cdn.pixabay.com/photo/2023/06/03/02/03/student-8036792_1280.png"
+                alt=""
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="col-span-7 bg-[#fafafa] p-6 space-y-1">
+              <h3 class="text-[#1eaaf1] text-2xl font-semibold capitalize">
+                arts lesson
+              </h3>
+              <p
+                class="text-base leading-normal tracking-wider capitalize font-medium"
+              >
+                <span class="text-[#fda638]">class time:</span>
+                <span> 9.00am - 10am</span>
+              </p>
+              <div class="pt-3">
+                <p class="text-base text-black opacity-50 leading-normal">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Laborum veritatis ut in et, officiis esse eaque, reiciendis
+                  tempora necessitatibus.officiis esse eaque, reiciendis tempora
+                  necessitatibus.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- card -->
+
+          <div class="grid grid-cols-12">
+            <div class="col-span-5">
+              <img
+                src="https://cdn.pixabay.com/photo/2023/06/03/02/03/student-8036792_1280.png"
+                alt=""
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="col-span-7 bg-[#fafafa] p-6 space-y-1">
+              <h3 class="text-[#1eaaf1] text-2xl font-semibold capitalize">
+                arts lesson
+              </h3>
+              <p
+                class="text-base leading-normal tracking-wider capitalize font-medium"
+              >
+                <span class="text-[#fda638]">class time:</span>
+                <span> 9.00am - 10am</span>
+              </p>
+              <div class="pt-3">
+                <p class="text-base text-black opacity-50 leading-normal">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Laborum veritatis ut in et, officiis esse eaque, reiciendis
+                  tempora necessitatibus.officiis esse eaque, reiciendis tempora
+                  necessitatibus.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- card -->
+
+          <div class="grid grid-cols-12">
+            <div class="col-span-5">
+              <img
+                src="https://cdn.pixabay.com/photo/2023/06/03/02/03/student-8036792_1280.png"
+                alt=""
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="col-span-7 bg-[#fafafa] p-6 space-y-1">
+              <h3 class="text-[#1eaaf1] text-2xl font-semibold capitalize">
+                arts lesson
+              </h3>
+              <p
+                class="text-base leading-normal tracking-wider capitalize font-medium"
+              >
+                <span class="text-[#fda638]">class time:</span>
+                <span> 9.00am - 10am</span>
+              </p>
+              <div class="pt-3">
+                <p class="text-base text-black opacity-50 leading-normal">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Laborum veritatis ut in et, officiis esse eaque, reiciendis
+                  tempora necessitatibus.officiis esse eaque, reiciendis tempora
+                  necessitatibus.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- card -->
+
+          <div class="grid grid-cols-12">
+            <div class="col-span-5">
+              <img
+                src="https://cdn.pixabay.com/photo/2023/06/03/02/03/student-8036792_1280.png"
+                alt=""
+                class="w-full h-full object-cover"
+              />
+            </div>
+            <div class="col-span-7 bg-[#fafafa] p-6 space-y-1">
+              <h3 class="text-[#1eaaf1] text-2xl font-semibold capitalize">
+                arts lesson
+              </h3>
+              <p
+                class="text-base leading-normal tracking-wider capitalize font-medium"
+              >
+                <span class="text-[#fda638]">class time:</span>
+                <span> 9.00am - 10am</span>
+              </p>
+              <div class="pt-3">
+                <p class="text-base text-black opacity-50 leading-normal">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Laborum veritatis ut in et, officiis esse eaque, reiciendis
+                  tempora necessitatibus.officiis esse eaque, reiciendis tempora
+                  necessitatibus.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- card -->
+        </div>
+      </div>
+    </section>
+    <!-- our courses section -->
   </body>
 </html>
