--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
   </header>
 
-<!-- Hero Slider -->
+  <!-- Hero Slider -->
   <Section>
     <!-- Swiper -->
     <div class="swiper bannerSlider h-[600px] ">
@@ -130,6 +130,62 @@
     </div>
 
   </Section>
+
+  <!-- Services Section -->
+  <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+    <!-- Certified Teachers Card -->
+    <div class="bg-sky-400 text-white p-8 text-center relative">
+      <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center mx-auto mb-6">
+        <svg class="w-10 h-10 text-sky-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
+        </svg>
+      </div>
+      <h3 class="text-2xl font-medium mb-4">Certified Teachers</h3>
+      <p class=" text-base font-normal">Even the all-powerful Pointing has no control about the blind texts it is
+        an almost unorthographic.</p>
+    </div>
+
+    <!-- Special Education Card -->
+    <div class="bg-green-50 text-white p-8 text-center relative">
+      <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center mx-auto mb-6">
+        <svg class="w-10 h-10 text-green-50" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+        </svg>
+      </div>
+      <h3 class="text-2xl font-medium  mb-4">Special Education</h3>
+      <p class="text-base font-normal">Even the all-powerful Pointing has no control about the blind texts it is
+        an almost unorthographic.</p>
+    </div>
+
+    <!-- Book & Library Card -->
+    <div class="bg-purple-500 text-white p-8 text-center relative">
+      <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center mx-auto mb-6">
+        <svg class="w-10 h-10 text-purple-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
+          </path>
+        </svg>
+      </div>
+      <h3 class="text-2xl font-medium  mb-4">Book & Library</h3>
+      <p class="text-base font-normal">Even the all-powerful Pointing has no control about the blind texts it is
+        an almost unorthographic.</p>
+    </div>
+
+    <!-- Certification Card -->
+    <div class="bg-red-50 text-white p-8 text-center relative">
+      <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center mx-auto mb-6">
+        <svg class="w-10 h-10 text-red-50" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z">
+          </path>
+        </svg>
+      </div>
+      <h3 class="text-2xl font-medium  mb-4">Certification</h3>
+      <p class="text-base font-normal">Even the all-powerful Pointing has no control about the blind texts it is
+        an almost unorthographic.</p>
+    </div>
+  </section>
 
   <!-- what we offer section -->
   <section class="py-10">
@@ -488,8 +544,8 @@
   </section>
 
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- <script src="/assets/js/main.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- <script src="/assets/js/main.js"></script> -->
   <script src="/assets/js/main.js">
 
   </script>
