--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
   </Section>
 
+
   <!-- what we offer section -->
   <section class="py-10">
     <div class="holder">
@@ -298,9 +299,9 @@
       <!-- Heading -->
       <div
         class="text-center mb-12 [&>p]:text-[#abb8c3] [&>p]:text-base/[29px] [&>p]:font-normal [&>p]:max-w-[700px] [&>p]:mx-auto [&>p]:mt-4">
-        <h2 class="text-4xl font-bold">
-          <span class="text-purple-600">Certified</span>
-          <span class="text-orange-500">Teachers</span>
+        <h2 class="text-4xl font-bold text-[#0072B8]">
+          <span>Certified</span>
+          <span>Teachers</span>
         </h2>
         <p>Separated they live in. A small river named Duden flows by their place and supplies it with the
           necessary regelialia. It is a paradisematic country</p>
@@ -503,7 +504,7 @@
     class="bg-[url('/assets/image/bg_2.webp')] bg-cover bg-center bg-fixed md:h-[576px] text-black flex items-center justify-center">
     <div class="holder z-10 relative w-full h-full flex flex-col items-center justify-center text-center py-16">
       <div class="[&>p]:text-lg [&>p]:text-gray-600 [&>p]:mb-8 [&>p]:max-w-[692px] mb-12">
-        <h2 class="text-[28px]/[42px] md:text-[44px]/[66px] font-bold text-[#0003ac] mb-6">20 Years of Experience</h2>
+        <h2 class="text-[28px]/[42px] md:text-[44px]/[66px] font-bold text-[#0072B8] mb-6">20 Years of Experience</h2>
         <p>
           Separated they live in. A small river named Duden flows by their place and supplies it with the
           necessary regelialia. It is a paradisematic country.
@@ -513,22 +514,22 @@
       <div class="grid md:grid-cols-4 gap-4 w-full max-w-4xl">
         <!-- Certified Teachers -->
         <div class="counter-card p-6 text-center">
-          <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="teachers-counter">0</div>
+          <div class="text-[50px]/[90px] font-medium text-[#0072B8] mb-2" id="teachers-counter">0</div>
           <div class="text-base leading-[29px] font-normal">Certified Teachers</div>
         </div>
         <!-- Successful Kids -->
         <div class="counter-card p-6 text-center">
-          <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="kids-counter">0</div>
+          <div class="text-[50px]/[90px] font-medium text-[#0072B8] mb-2" id="kids-counter">0</div>
           <div class="text-base leading-[29px] font-normal">Successful Kids</div>
         </div>
         <!-- Happy Parents -->
         <div class="counter-card p-6 text-center">
-          <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="parents-counter">0</div>
+          <div class="text-[50px]/[90px] font-medium text-[#0072B8] mb-2" id="parents-counter">0</div>
           <div class="text-base leading-[29px] font-normal">Happy Parents</div>
         </div>
         <!-- Awards Won -->
         <div class="counter-card p-6 text-center">
-          <div class="text-[50px]/[90px] font-medium text-[#0003ac] mb-2" id="awards-counter">0</div>
+          <div class="text-[50px]/[90px] font-medium text-[#0072B8] mb-2" id="awards-counter">0</div>
           <div class="text-base leading-[29px] font-normal">Awards Won</div>
         </div>
       </div>
