--- a/afzal/index.html
+++ b/afzal/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kiddos - Kids School Website Template</title>
+    <link href="/dist/lightbox.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link href="/dist/output.css" rel="stylesheet" />
@@ -247,67 +248,107 @@
     <!-- Request A Quote Section -->
     <section>Request A Quote secton</section>
 
-    <section>Gallery section</section>
+    <!-- Gallery section -->
+    <!-- <div class="grid grid-cols-4">
+        <div>
+            <img class="h-auto max-w-full" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg"
+                alt="">
+        </div>
+        <div>
+            <img class="h-auto max-w-full" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg"
+                alt="">
+        </div>
+        <div>
+            <img class="h-auto max-w-full" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg"
+                alt="">
+        </div>
+        <div>
+            <img class="h-auto max-w-full" src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg"
+                alt="">
+        </div>
+    </div> -->
 
-     <!-- FAQ Section -->
-  <section class="py-16">
-    <div class="holder space-y-4">
-      <details class="group [&_summary::-webkit-details-marker]:hidden" open>
-        <summary
-          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
-          <h2 class=" text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+    <section>
+        <div class="gallery md:grid grid-cols-2 lg:grid-cols-4">
 
-          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
-            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-          </svg>
-        </summary>
+            <a href="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg" data-lightbox="models">
+                <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-1.jpg" alt="">
+            </a>
 
-        <p class="px-4 pt-4 text-black/80 text-base font-normal">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
-          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
-          consequuntur distinctio corporis earum similique!
-        </p>
-      </details>
+            <a href="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg" data-lightbox="models">
+                <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-2.jpg" alt="">
+            </a>
 
-      <details class="group [&_summary::-webkit-details-marker]:hidden">
-        <summary
-          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
-          <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+            <a href="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" data-lightbox="models">
+                <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-3.jpg" alt="">
+            </a>
 
-          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
-            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-          </svg>
-        </summary>
+            <a href="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" data-lightbox="models">
+                <img src="https://flowbite.s3.amazonaws.com/docs/gallery/square/image-4.jpg" alt="">
+            </a>
 
-        <p class="px-4 pt-4 text-black/80 text-base font-normal">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
-          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
-          consequuntur distinctio corporis earum similique!
-        </p>
-      </details>
+        </div>
+    </section>
 
-      <details class="group [&_summary::-webkit-details-marker]:hidden">
-        <summary
-          class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
-          <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+    <!-- FAQ Section -->
+    <section class="py-16">
+        <div class="holder space-y-4">
+            <details class="group [&_summary::-webkit-details-marker]:hidden" open>
+                <summary
+                    class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+                    <h2 class=" text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
 
-          <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
-            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-          </svg>
-        </summary>
+                    <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                    </svg>
+                </summary>
 
-        <p class="px-4 pt-4 text-black/80 text-base font-normal">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
-          recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
-          consequuntur distinctio corporis earum similique!
-        </p>
-      </details>
-    </div>
-  </section>
-  <!-- FAQ Section End-->
+                <p class="px-4 pt-4 text-black/80 text-base font-normal">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+                    recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+                    consequuntur distinctio corporis earum similique!
+                </p>
+            </details>
+
+            <details class="group [&_summary::-webkit-details-marker]:hidden">
+                <summary
+                    class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+                    <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+
+                    <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                    </svg>
+                </summary>
+
+                <p class="px-4 pt-4 text-black/80 text-base font-normal">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+                    recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+                    consequuntur distinctio corporis earum similique!
+                </p>
+            </details>
+
+            <details class="group [&_summary::-webkit-details-marker]:hidden">
+                <summary
+                    class="flex items-center justify-between gap-1.5 rounded-md border border-gray-100 bg-gray-50 p-4 text-black">
+                    <h2 class="text-xl font-medium">Lorem ipsum dolor sit amet consectetur adipisicing?</h2>
+
+                    <svg class="size-5 shrink-0 transition-transform duration-300 group-open:-rotate-180"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                    </svg>
+                </summary>
+
+                <p class="px-4 pt-4 text-black/80 text-base font-normal">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab hic veritatis molestias culpa in,
+                    recusandae laboriosam neque aliquid libero nesciunt voluptate dicta quo officiis explicabo
+                    consequuntur distinctio corporis earum similique!
+                </p>
+            </details>
+        </div>
+    </section>
+    <!-- FAQ Section End-->
 
     <!-- Footer -->
     <footer class="bg-blue-600">
@@ -447,6 +488,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <script src="/assets/js/lightbox-plus-jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- <script src="/assets/js/main.js"></script> -->
     <script>
