--- a/afzal/index.html
+++ b/afzal/index.html
@@ -110,6 +110,19 @@
 
     </Section>
 
+    <!-- Short banner -->
+    <section
+        class="h-[400px] bg-no-repeat bg-cover bg-center relative flex flex-col items-center justify-center text-center"
+        style="background-image: url('/assets/image/bg_2.webp');">
+        <div class="overlay"></div>
+        <div class="holder text-center absolute z-10 space-y-5">
+            <h1 class=" text-white text-4xl md:text-5xl font-black ">About Us</h1>
+            <p class="text-white text-lg font-medium [&>a>span]:transition-all [&>a>span:hover]:text-blue-600 [&>a>span]:mr-3">
+                <a href="index.html"> <span>Home</span> <i class="fa-solid fa-angle-right"></i></a>
+                <span class=" ml-3">About us</span>
+            </p>
+        </div>
+    </section>
     <!-- Services Section -->
     <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
         <!-- Certified Teachers Card -->
